--- a/mandelbulber2/formula/ui/transf_difs_chessboard.ui
+++ b/mandelbulber2/formula/ui/transf_difs_chessboard.ui
@@ -566,7 +566,7 @@
       <item>
        <widget class="QLabel" name="label_information_general">
         <property name="text">
-         <string notr="true">&lt;p&gt;TransfDifsBoxIteration  fragmentarium code, mdifs by knighty (jan 2012)&lt;/p&gt;&lt;table&gt;
+         <string notr="true">&lt;p&gt;TransfDIFSChessboard a chessboard pattern on a sdf box&lt;br&gt;http://www.iquilezles.org/www/articles/distfunctions/distfunctions.htm&lt;/p&gt;&lt;table&gt;
 &lt;/table&gt;
 &lt;br&gt;&lt;b&gt;Examples using this formula&lt;/b&gt;&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsCayley2_coloredByChessboard.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsChessboard_T-DifsSphereGrid.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T-DifsChessboard_coloredBy FoldBox.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Chessboard hybrid color.fract&lt;br&gt;Graeme McLaren  collection - license Creative Commons  (CC-BY 4.0)/T_DIFS Chessboard.fract&lt;h3&gt;Code&lt;/h3&gt;</string>
         </property>
